# docsore

./: .gitignore  Cargo.toml
docsore.db/: db  snap.00000000000008C8  snap.00000000000012D0
docsore_derive/: Cargo.toml
docsore_derive/src/: lib.rs
src/: logger.rs  main.rs
src/adapter/: mod.rs
