[package]
name = "docsore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
anyhow = "1"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.22"

bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }

seahash = "4.1.0"