[package]
name = "docsore_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
darling = "0.14.2"
proc-macro2 = "1.0.47"